--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.134",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.22",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.11",
+    "tslib": "^1.10.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^0.9.9"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
